--- a/src/Makefile
+++ b/src/Makefile
@@ -3,53 +3,40 @@
 
 # Makefile for MRNIU/SimpleKernel.
 
-BOOT_DIR= ./arch/i386/boot
-HPP_DIR= ./include
-LIBC_DIR= ./include/libc
-ARCH_DIR= ./arch/i386
+BOOT_DIR= ./boot
+KERNEL_DIR= ./kernel
 
-C_SOURCES = $(shell find . -name "*.c")
-S_SOURCES = $(shell find . -name "*.s")
-OBJ= $(patsubst %.c, %.o, $(C_SOURCES)) \
-     $(patsubst %.s, %.o, $(S_SOURCES))
-
-
+OBJ= $(BOOT_DIR)/boot.o $(KERNEL_DIR)/kernel.o $(KERNEL_DIR)/vsprintf.o \
+     $(KERNEL_DIR)/printk.o
 CC= i386-elf-gcc
-CFLAGS= -std=gnu99 -ffreestanding -nostdinc -O2 -Wall -Wextra -c -I$(LIBC_DIR)\
- 				-I$(HPP_DIR) -I$(ARCH_DIR) -I$(ARCH_DIR)/include
+CFLAGS= -std=gnu99 -ffreestanding -O2 -Wall -Wextra -c
+# -ffreestanding 按独立环境编译,允许指定程序入口.
+# 详情参考gcc网站最近的资料
 
 LD= i386-elf-ld
 LDFLAGS= -A elf32_i386 -T$(BOOT_DIR)/link.ld
-
 AS= i386-elf-as
 ASFLAGS= -march=i386
 
-# 生成 kernel
+# 生成 ketnel
 kernel.kernel: $(OBJ)
-	@echo 正在生成内核... $<
-	@$(LD) $(LDFLAGS) $^ -o $@
+	$(LD) $(LDFLAGS) $^ -o $@
 
-.c.o:
-	@echo 编译C文件... $<
-	@$(CC) $(CFLAGS) $< -o $@
+# 生成 main.o
+kernel.o: $(KERNEL_DIR)/kernel.c
+	$(CC) $(CFLAGS) $^ -o $@
 
-.s.o:
-	@echo 编译汇编文件... $<
-	@$(AS) $(ASFLAGS) $< -o $@
+vsprintf.o: $(KERNEL_DIR)/vsprintf.c
+	$(CC) $(CFLAGS) $^ -o $@
 
-.PHONY: info
-info:
-	@echo CC: $(CC)
-	@echo CFLAGS: $(CFLAGS)
-	@echo LD: $(LD)
-	@echo LDFLAGS: $(LDFLAGS)
-	@echo AS: $(AS)
-	@echo ASFLAGS: $(ASFLAGS)
+printk.o: $(KERNEL_DIR)/printk.c
+	$(CC) $(CFLAGS) $^ -o $@
+
+# 生成 boot.o
+boot.o: $(BOOT_DIR)/boot.s
+	$(AS) $(ASFLAGS) $^ -o $@
 
 # 删除源码外的所有文件
-.PHONY: clean
 clean:
-	@echo 正在删除... $<
-	@find . -name "*.o"  | xargs rm -f
-	@-rm -f kernel.kernel
-	@echo 删除完毕
+	find . -name "*.o"  | xargs rm -f
+	-rm kernel.kernel
